issue rework, bugfix, polyfill

--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/webxr-polyfill@latest/build/webxr-polyfill.js"></script>
   </body>
 </html>
